--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/royalsrivastavagithub/Noted#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.2"
