--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/royalsrivastavagithub/Noted#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
